<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Clock</string>
    <string name="action_settings">Settings</string>
    <string name="dayMon">Mon</string>
    <string name="dayTue">Tue</string>
    <string name="dayWed">Wed</string>
    <string name="dayThu">Thu</string>
    <string name="dayFri">Fri</string>
    <string name="daySat">Sat</string>
    <string name="daySun">Sun</string>
    

</resources>
